fixed unwanted scrollbar, button focus, content card onclick effect, hover underline

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,9 +9,11 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
-
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -48,14 +50,8 @@ ol {
   white-space: nowrap;
 }
 
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button:hover, .content__video-card:hover, .search-form__pseudo-checkbox {
-  cursor: url('../images/custom-pointer.svg'), auto;
+.button:hover, .content__video-card:hover, .search-form__label {
+  cursor: pointer;
 }
 
 .content {
@@ -72,24 +68,6 @@ ol {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-}
-
-.content__list {
-  position: relative;
-  height: 298px;
-  overflow-y: scroll;
-}
-
-.content__list-item {
-  margin-block-end: 32px;
-}
-
-.content__list-item:last-of-type {
-  margin-block-end: 0;
-}
-
-.title {
-  margin-block-end: 17px;
 }
 
 .result__video-container {
@@ -128,18 +106,20 @@ ol {
   display: flex;
   gap: 5px;
   width: fit-content;
-  appearance: none;
 }
 
 .search-form__textfield {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-stretch: condensed;
+  color: #fff;
   background-color: transparent;
   border-block: 1px solid white;
   border-inline: none;
   width: 225px;
+  appearance: none;
 }
+
 .search-form__textfield::placeholder {
   color: rgba(255, 255, 255, 0.70);
 }
@@ -148,20 +128,27 @@ ol {
   border-inline: 1px solid white;
 }
 
-.button:hover, .content__video-card:hover {
+.button:hover, .content__video-card:hover, .search-form__label:hover {
   text-decoration: underline;
+}
+
+.search-form__fieldset:first-of-type .search-form__label:hover {
+  text-decoration: none;
 }
 
 .button:active, .content__video-card:active {
   background-color: #545050;
 }
-
+.content__video-card:target {
+  background-color: #545050;
+}
 .search-form__textfield:focus, .button:focus {
   outline: none;
 }
 
-.search-form__label:has(:focus-visible), .button:has(:focus-visible) {
+.search-form__label:has(:focus-visible), .button:focus-visible {
   outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__checkbox-list {
@@ -177,7 +164,7 @@ ol {
   border: 1px solid #fff;
 }
 
-input[type="checkbox"]:checked + span {
+.search-form__checkbox[type="checkbox"]:checked + .search-form__pseudo-checkbox {
   background-image: url(../images/checkbox-marker.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -202,10 +189,26 @@ input[type="checkbox"]:checked + span {
   font-weight: 700;
   line-height: 70.5px;
   text-transform: uppercase;
+  margin-block-end: 28px;
 }
 
 .content__accent {
   color: #545050;
+}
+
+.content__list {
+  position: relative;
+  height: 298px;
+  overflow-y: auto;
+  padding: 2px;
+}
+
+.content__list-item {
+  margin-block-end: 32px;
+}
+
+.content__list-item:last-of-type {
+  margin-block-end: 0;
 }
 
 .content__card-link {
@@ -215,6 +218,10 @@ input[type="checkbox"]:checked + span {
   margin: 3px;
 }
 
+.content__card-link_current {
+  background-color: #545050;
+}
+
 .content__video-card {
   display: flex;
   justify-content: space-between;
@@ -222,7 +229,7 @@ input[type="checkbox"]:checked + span {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
